--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,8 +11,8 @@ body {
   margin: auto;
 }
 .image {
-  width: 12em;
-  height: 15em;
+  width: 15em;
+  height: 18em;
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -27,36 +27,62 @@ body {
   outline: 5px dashed rgba(255, 255, 255, 0.6);
   background: rgba(255, 255, 255, 0.5);
 }
+#line {
+  width: 920px;
+  margin: -20px 0 0 0 0;
+}
+.hr {
+  border-top: 2px solid rgb(200, 20, 255);
+}
 .instructions {
   font-family: "Montserrat", sans-serif;
   font-size: 1.5em;
   font-weight: bolder;
   color: yellow;
   text-align: center;
-}
-.fancy {
+  margin: 3em;
 }
 .main {
   display: inline-block;
-  float: right;
   background-color: rgba(255, 255, 255, 0.5);
   padding: 8px;
   line-height: 20px;
-  width: 250px;
-  box-shadow: 1em 1em 5em rgba(0, 0, 0, 0.5);
+  width: 20em;
+  height: 12em;
+  border: 3px dotted rgb(200, 20, 255);
 }
 .container2 {
   height: 10em;
-  position: relative;
-  float: right;
-  border: 3px dotted rgb(200, 20, 255);
+  position: absolute;
+  top: 30%;
+  left: 65%;
 }
 
 .center {
   margin: 0;
   position: absolute;
   top: 50%;
-  left: 50%;
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
+}
+.guessedwords {
+  position: absolute;
+  font-size: 3em;
+  line-height: 60px;
+  letter-spacing: 3px;
+  font-family: "Montserrat", cursive;
+  width: 10em;
+  height: 10em;
+  text-align: center;
+  top: 30%;
+  right: 80%;
+  background-color: rgba(250, 250, 250, 0.7);
+  padding: 6px;
+}
+.warn {
+  text-align: center;
+  color: red;
+}
+.test {
+  border: 2px dotted red;
 }
